--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMlyyXY77orfAxTwoVoUAF1",
+      "authorship_tag": "ABX9TyNF7sOILXOn/+dV0/mFj8Lx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,6 +46,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "um1-Bxljhc-V",
+        "colab_type": "text"
+      },
+      "source": [
+        "Get the data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "j4W01aidbCDr",
@@ -71,6 +81,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yEfNix1IhfQV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Split the labels from the features"
+      ]
     },
     {
       "cell_type": "code",
@@ -146,6 +166,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WBSdde7Khkwf",
+        "colab_type": "text"
+      },
+      "source": [
+        "Split the data into train and test sets"
+      ]
     },
     {
       "cell_type": "code",
@@ -261,40 +291,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q3RCh6nJY04j",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X_train[:,[1]],y_train, marker='o', c=X_train[:,[1]],s=25)\n",
-        "plt.xlabel('X_train')\n",
-        "plt.colorbar(fig)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iLTjrUudY78D",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
-        "plt.xlabel('X_test')\n",
-        "plt.colorbar(fig)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "FNT8eLLIb8TK",
         "colab_type": "code",
         "colab": {}
@@ -332,6 +328,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-DYIlkHfh13m",
+        "colab_type": "text"
+      },
+      "source": [
+        "Make predictions"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "C7PGuRp5bXzI",
@@ -345,21 +351,25 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "y4Cvax1LZyrb",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ouBq-newh8Ww",
+        "colab_type": "text"
       },
       "source": [
-        "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
-        "plt.xlabel('X_test')\n",
-        "plt.colorbar(fig)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "Calculate the confusion matrix"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wTyP957QijOW",
+        "colab_type": "text"
+      },
+      "source": [
+        "TP - FP<br>\n",
+        "FN - TN"
+      ]
     },
     {
       "cell_type": "code",
@@ -375,6 +385,23 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LxMlfD2xicah",
+        "colab_type": "text"
+      },
+      "source": [
+        "Precision = TP/(TP + FP)<br>\n",
+        "Recall = TP / (TP + FN)<br>\n",
+        "F1 = 2 * ((precision * recall)/(precision + recall))<br>\n",
+        "\n",
+        "The support is the number of occurrences of each class in y_true.<br>\n",
+        "\n",
+        "\n",
+        "https://en.wikipedia.org/wiki/F1_score"
+      ]
     },
     {
       "cell_type": "code",
