--- a/NaiveBayesMultinomialNB2.ipynb
+++ b/NaiveBayesMultinomialNB2.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMS/0PHQ2Iho9sUdis2br1r",
+      "authorship_tag": "ABX9TyMATGGTAUCvoDAE82VZZFjt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,12 +36,47 @@
         "from sklearn.datasets import fetch_20newsgroups\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.metrics import confusion_matrix"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sQzSRRQdmdDI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Get the data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ypspjbrrmcLI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "data = fetch_20newsgroups()\n",
         "data.target_names"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z4jExOfgml5c",
+        "colab_type": "text"
+      },
+      "source": [
+        "Select a subset of the data"
+      ]
     },
     {
       "cell_type": "code",
@@ -51,7 +86,7 @@
         "colab": {}
       },
       "source": [
-        "categories = ['talk.religion.misc', 'soc.religion.christian',\n",
+        "categories = ['talk.religion.misc', 'misc.forsale', 'soc.religion.christian',\n",
         "              'sci.space', 'comp.graphics']\n",
         "train = fetch_20newsgroups(subset='train', categories=categories)\n",
         "test = fetch_20newsgroups(subset='test', categories=categories)"
@@ -73,6 +108,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w00lcrFGm3hK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create the model and construct a pipeline from the given estimators.\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6gjJx861USiZ",
@@ -80,14 +126,20 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-        "from sklearn.naive_bayes import MultinomialNB\n",
-        "from sklearn.pipeline import make_pipeline\n",
-        "\n",
         "model = make_pipeline(TfidfVectorizer(), MultinomialNB())"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oKyub1b5nNB_",
+        "colab_type": "text"
+      },
+      "source": [
+        "Train the model"
+      ]
     },
     {
       "cell_type": "code",
@@ -111,9 +163,8 @@
         "colab": {}
       },
       "source": [
-        "from sklearn.metrics import confusion_matrix\n",
         "mat = confusion_matrix(test.target, labels)\n",
-        "sns.heatmap(mat.T, square=True, annot=True, fmt='d', cbar=False,\n",
+        "sns.heatmap(mat.T, square=True, annot=True, fmt='d', cbar=True,\n",
         "            xticklabels=train.target_names, yticklabels=train.target_names)\n",
         "plt.xlabel('true label')\n",
         "plt.ylabel('predicted label');"
@@ -171,6 +222,19 @@
       },
       "source": [
         "predict_category('determining the screen resolution')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DTaULn_Qo8EW",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "predict_category('dollhouse for sale')"
       ],
       "execution_count": 0,
       "outputs": []
