--- a/NaiveBayesBernoulli.ipynb
+++ b/NaiveBayesBernoulli.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesBernoulli.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPY+TOnO8iIEQbqFSkFd9uf",
+      "authorship_tag": "ABX9TyO5IHPW58v6vmLlgsjL5xw5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,6 +135,8 @@
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X[:,0],X[:,1], marker='o', c=X[:,1],\n",
         "            s=25)\n",
+        "plt.xlabel(\"X[:,0]\")\n",
+        "plt.ylabel(\"X[:,1]\")\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
@@ -184,6 +186,8 @@
       "source": [
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X_train[:,0],Y_train, marker='o', c=X_train[:,0], s=25)\n",
+        "plt.xlabel(\"X_train[:,0]\")\n",
+        "plt.ylabel(\"y_train\")\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
@@ -209,8 +213,9 @@
       },
       "source": [
         "plt.figure(figsize=(10,5))\n",
-        "fig = plt.scatter(X_test[:,0],Y_test, marker='o', c=X_test[:,0],\n",
-        "            s=25)\n",
+        "fig = plt.scatter(X_test[:,0],Y_test, marker='o', c=X_test[:,0],s=25)\n",
+        "plt.xlabel(\"X_test[:,0]\")\n",
+        "plt.ylabel(\"y_test\")\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
@@ -295,6 +300,8 @@
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X_test[:,0],Y_test, marker='o', c=X_test[:,0],s=25)\n",
         "plt.plot([0,0,1,1],[0,1,0,1], 'r+')\n",
+        "plt.xlabel(\"X_test[:,0]\")\n",
+        "plt.ylabel(\"y_test\")\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
