--- a/NaiveBayesGaussian.ipynb
+++ b/NaiveBayesGaussian.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNjI7PMULPo+T1MefRCZUTA",
+      "authorship_tag": "ABX9TyNsuSiZA7cSTcS4WmE9xVBY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,6 +178,8 @@
       "source": [
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X_train[:,0],y_train, marker='o', c=X_train[:,1],s=25, cmap='RdBu')\n",
+        "plt.xlabel(\"X_train[:,0]\")\n",
+        "plt.ylabel(\"y_train\")\n",
         "plt.colorbar(fig)\n",
         "plt.plot(X_test[:,0],ypredClass,'r+')\n",
         "plt.show()"
