--- a/NaiveBayesGaussian2.ipynb
+++ b/NaiveBayesGaussian2.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesGaussian2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMlHhEHu04jl/f/4XGYKQjO",
+      "authorship_tag": "ABX9TyNHE38qmBj3YVcVS4pq+A3y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,10 +61,23 @@
         "from sklearn.datasets import make_classification\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.naive_bayes import GaussianNB "
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "510xI-G_YqoI",
+        "colab_type": "text"
+      },
+      "source": [
+        "We are using the Iris dataset.<br>\n",
+        "It has 3 classes of irises listed. <br>\n",
+        "The length and width of the sepal and the petals determine the class for each iris."
+      ]
     },
     {
       "cell_type": "code",
@@ -77,6 +90,20 @@
         "# store the feature matrix (X) and label (y) \n",
         "X = iris.data \n",
         "y = iris.target "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z-hNpHR6ZFia",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y.shape\n",
+        "y.view()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -139,6 +166,8 @@
       "source": [
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X_train[:,0],y_train, marker='o', c=X_train[:,1],s=25)\n",
+        "plt.xlabel(\"X_train[:,0]\")\n",
+        "plt.ylabel(\"y_train\")\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
@@ -164,7 +193,6 @@
       },
       "source": [
         "# training the model on training set \n",
-        "from sklearn.naive_bayes import GaussianNB \n",
         "gnb = GaussianNB() \n",
         "gnb.fit(X_train, y_train) "
       ],
@@ -209,6 +237,8 @@
         "plt.figure(figsize=(10,5))\n",
         "fig = plt.scatter(X_test[:,0],y_test, marker='o', c=X_test[:,1],s=25)\n",
         "plt.plot(X_test[:,0],y_pred,'r+')\n",
+        "plt.xlabel(\"X_test[:,0]\")\n",
+        "plt.ylabel(\"y_test\")\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
