--- a/NaiveBayesMultinomialNB.ipynb
+++ b/NaiveBayesMultinomialNB.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOj/itetxgq3zoAWNAhHc79",
+      "authorship_tag": "ABX9TyPyeot4H5tv7AC3utLnXHcM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gjiv9XNIZ91e",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create text data<br>\n",
+        "Transform the data into vectors<br>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ImE__1MgCovU",
@@ -68,10 +79,23 @@
         "dv = DictVectorizer(sparse=False)\n",
         "X = dv.fit_transform(data)\n",
         "Y = np.array([1, 0])\n",
-        "X"
+        "print(X)\n",
+        "#car house river shop street tree"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wE331bsnce1p",
+        "colab_type": "text"
+      },
+      "source": [
+        "The output classes are:<br>\n",
+        " >1 for city <br>\n",
+        "  0 for the countryside."
+      ]
     },
     {
       "cell_type": "code",
@@ -81,10 +105,20 @@
         "colab": {}
       },
       "source": [
-        "Y"
+        "print(Y)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eGnR0XAcappZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create and train the model"
+      ]
     },
     {
       "cell_type": "code",
@@ -95,8 +129,7 @@
       },
       "source": [
         "mnb = MultinomialNB()\n",
-        "mnb.fit(X, Y)\n",
-        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
+        "mnb.fit(X, Y)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -110,9 +143,7 @@
       },
       "source": [
         "test_data = data = [\n",
-        "{'house': 80, 'street': 20, 'shop': 15, 'car': 70, 'tree': 10, 'river': \n",
-        "1}]\n",
-        "{'house': 10, 'street': 5, 'shop': 1, 'car': 8, 'tree': 300, 'river': 0} "
+        "{'house': 80, 'street': 20, 'shop': 15, 'car': 70, 'tree': 10, 'river': 1}]"
       ],
       "execution_count": 0,
       "outputs": []
