--- a/NaiveBayesMultinomialNB2.ipynb
+++ b/NaiveBayesMultinomialNB2.ipynb
@@ -6,7 +6,7 @@
       "name": "NaiveBayesMultinomialNB2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMATGGTAUCvoDAE82VZZFjt",
+      "authorship_tag": "ABX9TyO5ZSpVBXjWi/c9elUV0SCN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,6 +186,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VPGXdsXjdFba",
+        "colab_type": "text"
+      },
+      "source": [
+        "Make predictions"
+      ]
     },
     {
       "cell_type": "code",
