--- a/KNN_1.ipynb
+++ b/KNN_1.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN-1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMAPXOThjhDls8KC+BrNI8h",
+      "authorship_tag": "ABX9TyOhpt4DdUQR7fZ+eHfPh21p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
       "outputs": []
@@ -123,9 +123,8 @@
         "colab": {}
       },
       "source": [
-        "print(neigh.predict([[1.1]]))\n",
-        "#print(neigh.predict_proba(X)[:,1])\n",
-        "#print(neigh.predict_proba([[0.9]]))"
+        "testp = 2.4\n",
+        "print(neigh.predict([[testp]]))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -140,7 +139,7 @@
       "source": [
         "plt.figure(figsize=(10,3))\n",
         "fig = plt.scatter(X,y, marker='o', c=X,s=25)\n",
-        "plt.plot(1.1,neigh.predict([[1.1]]),'r+' )\n",
+        "plt.plot(testp,neigh.predict([[testp]]),'r+' )\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
       ],
