--- a/KNN2.ipynb
+++ b/KNN2.ipynb
@@ -6,7 +6,7 @@
       "name": "KNN2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNF7sOILXOn/+dV0/mFj8Lx",
+      "authorship_tag": "ABX9TyPu4nSHMW68rIzSleruW+/O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +63,8 @@
         "colab": {}
       },
       "source": [
-        "path = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\""
+        "path = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
+        "headernames = ['sepal-length', 'sepal-width', 'petal-length', 'petal-width', 'Class']"
       ],
       "execution_count": 0,
       "outputs": []
@@ -252,7 +253,7 @@
       },
       "source": [
         "plt.figure(figsize=(10,3))\n",
-        "fig = plt.scatter(X_test[:,[1]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
+        "fig = plt.scatter(X_test[:,[0]],y_test, marker='o', c=X_test[:,[1]],s=25)\n",
         "plt.xlabel('X_test')\n",
         "plt.colorbar(fig)\n",
         "plt.show()"
