--- a/HP1 Cars.ipynb
+++ b/HP1 Cars.ipynb
@@ -23,56 +23,8 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/Cars.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/HP1%20Cars.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "B7xlEP-4w4m1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Clone the entire repo.\n",
-        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
-        "%cd cloned-repo\n",
-        "!ls"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "M5d-rhNzNIN9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from IPython.display import Image\n",
-        "def page(num):\n",
-        "    #print(str(num))\n",
-        "    return Image(\"Intro to Machine Learning Programming (\"+ str(num) + \").png\")\n",
-        "print(\"done\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KJ3hbZm4N9un",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from IPython.display import Image\n",
-        "Image(\"Intro to Machine Learning Programming.png\")\n",
-        "print(\"done\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -372,48 +324,8 @@
         "colab_type": "text"
       },
       "source": [
-        "### Inspect the data\n",
-        "\n",
-        "Have a quick look at the joint distribution of a few pairs of columns from the training set."
+        "### Inspect the data\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "MnlJF1uDu14u",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "sns.pairplot(train_dataset[[\"MPG\", \"Cylinders\", \"Displacement\", \"Weight\"]], diag_kind=\"kde\")\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sc-BJdtUHlte",
-        "colab_type": "text"
-      },
-      "source": [
-        "Have a quick look at the joint distribution of a few pairs of columns from the test set."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CAgLfVw9HfyC",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "sns.pairplot(test_dataset[[\"MPG\", \"Cylinders\", \"Displacement\", \"Weight\"]], diag_kind=\"kde\")\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -620,30 +532,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OSIFYnldvX25",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Display training progress by printing a single dot for each completed epoch\n",
-        "class PrintDot(keras.callbacks.Callback):\n",
-        "  def on_epoch_end(self, epoch, logs):\n",
-        "    if epoch % 100 == 0: print('')\n",
-        "    print('.', end='')\n",
-        "\n",
-        "EPOCHS = 100\n",
-        "\n",
-        "history = model.fit(\n",
-        "  normed_train_data, train_labels,\n",
-        "  epochs=EPOCHS, validation_split = 0.2, verbose=0,\n",
-        "  callbacks=[PrintDot()])"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "lC2qUqN_impr",
         "colab_type": "code",
         "colab": {}
@@ -672,10 +560,7 @@
         "           label = 'Val Error')\n",
         "  plt.ylim([0,20])\n",
         "  plt.legend()\n",
-        "  plt.show()\n",
-        "\n",
-        "\n",
-        "plot_history(history)"
+        "  plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -698,13 +583,14 @@
         "colab": {}
       },
       "source": [
+        "EPOCHS = 100\n",
         "model = build_model()\n",
         "\n",
         "# The patience parameter is the amount of epochs to check for improvement\n",
         "early_stop = keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
         "\n",
         "history = model.fit(normed_train_data, train_labels, epochs=EPOCHS,\n",
-        "                    validation_split = 0.2, verbose=0, callbacks=[early_stop, PrintDot()])\n",
+        "                    validation_split = 0.2, verbose=0, callbacks=[early_stop])\n",
         "\n",
         "plot_history(history)"
       ],
@@ -764,65 +650,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vmPX0Sykv2nh",
+        "id": "i2Wm-XTdmbmD",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "error = test_predictions - test_labels\n",
-        "plt.hist(error, bins = 25)\n",
-        "plt.xlabel(\"Prediction Error [MPG]\")\n",
-        "_ = plt.ylabel(\"Count\")\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hgoK_0O82aPf",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#Normalized data\n",
-        "trial=([1, 1, 1, 1, 1, 1, 1.0, 0.0, 0.0],)\n",
-        "trial_predictions = model.predict(trial).flatten()\n",
-        "print(\"done\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "8awUqsh53VRr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "print(trial_predictions)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4f91YGdpFwW2",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.linear_model import LinearRegression\n",
-        "from sklearn.metrics import mean_absolute_error\n",
-        "\n",
-        "lr = LinearRegression()\n",
-        "lr.fit(train_dataset, train_labels)\n",
-        "y_pred = lr.predict(test_dataset)\n",
-        "\n",
-        "print(mean_absolute_error(test_labels, y_pred))"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -844,27 +677,27 @@
         "colab_type": "text"
       },
       "source": [
-        "#1971 Ford Pinto\n",
-        "dataset.at[32,\"Horsepower\"] = 100\n",
-        "print(dataset.loc[32])\n",
+        "1971 Ford Pinto<br>\n",
+        "dataset.at[32,\"Horsepower\"] = 100<br>\n",
+        "print(dataset.loc[32])<br>\n",
         "\n",
-        "#1974 Ford Maverick\n",
-        "dataset.at[126,\"Horsepower\"] = 75\n",
-        "print(dataset.loc[126])\n",
+        "1974 Ford Maverick<br>\n",
+        "dataset.at[126,\"Horsepower\"] = 75<br>\n",
+        "print(dataset.loc[126])<br>\n",
         "\n",
-        "#1980 Renault Le Car De Luxe\n",
-        "dataset.at[330,\"Horsepower\"] = 50\n",
-        "print(dataset.loc[330])\n",
+        "1980 Renault Le Car De Luxe<br>\n",
+        "dataset.at[330,\"Horsepower\"] = 50<br>\n",
+        "print(dataset.loc[330])<br>\n",
         "\n",
-        "#1980 Ford Mustang Cobra\n",
-        "dataset.at[336,\"Horsepower\"] = 88\n",
-        "print(dataset.loc[336])\n",
+        "1980 Ford Mustang Cobra<br>\n",
+        "dataset.at[336,\"Horsepower\"] = 88<br>\n",
+        "print(dataset.loc[336])<br>\n",
         "\n",
-        "#1981 Renault 18i\n",
-        "dataset.at[354,\"Horsepower\"] = 81\n",
-        "print(dataset.loc[354])\n",
-        "#1982 AMC Concord DL\n",
-        "dataset.at[374,\"Horsepower\"] = 82\n",
+        "1981 Renault 18i<br>\n",
+        "dataset.at[354,\"Horsepower\"] = 81<br>\n",
+        "print(dataset.loc[354])br>\n",
+        "1982 AMC Concord DL<br>\n",
+        "dataset.at[374,\"Horsepower\"] = 82<br>\n",
         "print(dataset.loc[374])"
       ]
     }
