--- a/HP2 Wage_per_hour.ipynb
+++ b/HP2 Wage_per_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "Wage_per_hour.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPCwikWT5tlzq+aKsg3YyTv",
+      "authorship_tag": "ABX9TyPcLb82I3AJc7cdkLey1Zk5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/Wage_per_hour.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/HP2%20Wage_per_hour.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -184,6 +184,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "HSpXOewJmvTc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "corr.columns.values"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Vl2sDHdZaenT",
         "colab_type": "code",
         "colab": {}
@@ -216,7 +229,7 @@
       },
       "source": [
         "This is a hyperparameter that can be adjusted. <br>\n",
-        "0.05 - 0.5"
+        "0.95 - 0.5"
       ]
     },
     {
@@ -348,8 +361,13 @@
         "  model = keras.Sequential([\n",
         "    layers.Dense(8, activation=tf.nn.relu,input_shape=([len(train_dataset.keys())]),),\n",
         "    #layers.Dropout(0.2),\n",
+        "\n",
         "    #layers.Dense(8, activation=tf.nn.relu),\n",
+        "    #layers.Dropout(0.2),\n",
+        "\n",
         "    layers.Dense(8, activation=tf.nn.relu),\n",
+        "    #layers.Dropout(0.2),\n",
+        "    \n",
         "    layers.Dense(1)\n",
         "  ])\n",
         "\n",
@@ -426,7 +444,7 @@
         "\n",
         "  plt.figure()\n",
         "  plt.xlabel('Epoch')\n",
-        "  plt.ylabel('Mean Abs Error [MPG]')\n",
+        "  plt.ylabel('Mean Abs Error [wage per hour]')\n",
         "  plt.plot(hist['epoch'], hist['mean_absolute_error'],\n",
         "           label='Train Error')\n",
         "  plt.plot(hist['epoch'], hist['val_mean_absolute_error'],\n",
@@ -457,41 +475,59 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a8FsVvMyqUvb",
+        "colab_type": "text"
+      },
+      "source": [
+        "\n",
+        "Discretization, also known as quantization or binning, divides a continuous feature into a pre-specified number of categories (bins), and thus makes the data discrete.<br>\n",
+        "One of the main goals of a discretization is to significantly reduce the number of discrete intervals of a continuous attribute. Hence, why this transformation can increase the performance of tree based models.<br>\n",
+        "Sklearn provides a KBinsDiscretizer class that can take care of this.<br>\n",
+        " The only thing you have to specify are:<br> the number of bins (n_bins) for each feature and how to encode these bins (ordinal, onehot or onehot-dense).<br>\n",
+        "\n",
+        "The optional strategy parameter can be set to three values:<br>\n",
+        ">**uniform**, where all bins in each feature have identical widths.<br>\n",
+        "**quantile** (default), where all bins in each feature have the same number of points.<br>\n",
+        "**kmeans**, where all values in each bin have the same nearest center of a 1D k-means cluster."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "QaWWkhVd3i_T",
+        "id": "Ukb-7c0PqT_-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "test_predictions = model.predict(normed_test_data).flatten()\n",
-        "\n",
-        "plt.scatter(test_labels, test_predictions)\n",
-        "plt.xlabel('True Values [wage]')\n",
-        "plt.ylabel('Predictions [wage]')\n",
-        "plt.axis('equal')\n",
-        "plt.axis('square')\n",
-        "plt.xlim([0,plt.xlim()[1]])\n",
-        "plt.ylim([0,plt.ylim()[1]])\n",
-        "_ = plt.plot([-100, 100], [-100, 100])\n",
-        "plt.show()"
+        "from sklearn.preprocessing import KBinsDiscretizer\n",
+        "disc = KBinsDiscretizer(n_bins=3, encode='uniform', \n",
+        "                        strategy='uniform')\n",
+        "disc.fit_transform(X) #X is the dataset"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZrQ8Hk2nqfHd",
+        "colab_type": "text"
+      },
+      "source": [
+        "If the output doesn’t make sense to you, invoke the bin_edges_ attribute on the discretizer (disc) and take a look at how the bins are divided. Then try another strategy and see how the bin edges change accordingly."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "g-wf_yU_3tT1",
+        "id": "ncxxh9xnqefC",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "error = test_predictions - test_labels\n",
-        "plt.hist(error, bins = 25)\n",
-        "plt.xlabel(\"Prediction Error [wage]\")\n",
-        "_ = plt.ylabel(\"Count\")\n",
-        "plt.show()"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
