--- a/wolvesAndCows.ipynb
+++ b/wolvesAndCows.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "wolvesAndCows.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqyjU8O2IYp/vhvoNUJQMH",
+      "authorship_tag": "ABX9TyNjoxJrWU9kavFovLDN2jyH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,16 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/wolvesAndCows.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ssR2P276sceV",
+        "colab_type": "text"
+      },
+      "source": [
+        "Need to copy cows_and_wolves.txt to the drive"
       ]
     },
     {
