--- a/wolvesAndCows.ipynb
+++ b/wolvesAndCows.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "wolvesAndCows.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNjoxJrWU9kavFovLDN2jyH",
+      "authorship_tag": "ABX9TyMhLyztiIkfzBC4xcuixw5r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,6 +32,16 @@
       },
       "source": [
         "Need to copy cows_and_wolves.txt to the drive"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KxHfVx93wOOh",
+        "colab_type": "text"
+      },
+      "source": [
+        "For a second, pretend you're a farmer and you have a problem--you need to setup a fence to protect your cows from packs of wovles. But where do you build your fence? "
       ]
     },
     {
@@ -80,11 +90,12 @@
         "\n",
         " # plot the wolves and cows\n",
         " for animal in df.animal.unique():\n",
-        "  pl.scatter(df[df.animal==animal].x,\n",
-        "  df[df.animal==animal].y,\n",
-        "  marker=animal,\n",
-        "  label=\"cows\" if animal==\"x\" else \"wolves\",\n",
-        "  color='black')\n",
+        "    pl.scatter(df[df.animal==animal].x,\n",
+        "    df[df.animal==animal].y,\n",
+        "    marker=animal,\n",
+        "    label=\"cows\" if animal==\"x\" else \"wolves\",\n",
+        "    color='black')\n",
+        "\n",
         " pl.title(clf_name)\n",
         " pl.legend(loc=\"best\")"
       ],
@@ -116,9 +127,9 @@
         "animals = []\n",
         "for y, row in enumerate(data):\n",
         " for x, item in enumerate(row):\n",
-        "  # x's are cows, o's are wolves\n",
-        "  if item in ['o', 'x']:\n",
-        "    animals.append([x, y, item])"
+        "    # x's are cows, o's are wolves\n",
+        "    if item in ['o', 'x']:\n",
+        "      animals.append([x, y, item])"
       ],
       "execution_count": 0,
       "outputs": []
@@ -140,9 +151,9 @@
         "train_cols = [\"x\", \"y\"]\n",
         "\n",
         "clfs = {\n",
-        " \"SVM\": svm.SVC(),\n",
-        " \"Logistic\" : linear_model.LogisticRegression(),\n",
-        " \"Decision Tree\": tree.DecisionTreeClassifier(),\n",
+        "  \"SVM\": svm.SVC(),\n",
+        "  \"Logistic\" : linear_model.LogisticRegression(),\n",
+        "  \"Decision Tree\": tree.DecisionTreeClassifier(),\n",
         "}\n",
         "\n",
         "plt_nmbr = 1\n"
@@ -163,9 +174,9 @@
       },
       "source": [
         "for clf_name, clf in clfs.items():\n",
-        " clf.fit(df[train_cols], df.animal_type)\n",
-        " plot_results_with_hyperplane(clf, clf_name, df, plt_nmbr)\n",
-        " plt_nmbr += 1\n",
+        "  clf.fit(df[train_cols], df.animal_type)\n",
+        "  plot_results_with_hyperplane(clf, clf_name, df, plt_nmbr)\n",
+        "  plt_nmbr += 1\n",
         "pl.show()"
       ],
       "execution_count": 31,
