--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SVM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxHZmm0dGfu8cyHJaYqRPB",
+      "authorship_tag": "ABX9TyONq9ZBBEKd9D/zifBYK+hd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,12 +103,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 407
         },
-        "outputId": "72efaed1-cb94-4255-ed45-1ee2338760a1"
+        "outputId": "d0dbbe0a-57a9-48c4-e87d-641119000f1d"
       },
       "source": [
         "df"
       ],
-      "execution_count": 55,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -253,8 +253,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "execution_count": 64
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CEly61sv33Ij",
+        "colab_type": "text"
+      },
+      "source": [
+        "Reduce the dataset to 100 rows"
       ]
     },
     {
@@ -262,7 +272,11 @@
       "metadata": {
         "id": "CNsw2zVlzSwc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        },
+        "outputId": "24b3754a-1e02-4a3b-d0f5-a63d8289800c"
       },
       "source": [
         "target = df['class']\n",
@@ -273,8 +287,184 @@
         "rows = list(range(100,150))\n",
         "df = df.drop(df.index[rows])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-68-82238f665896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mrows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m150\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3939\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3940\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues_from_object\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3941\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3942\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3943\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "liT4Dc7i3wpa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 407
+        },
+        "outputId": "a514c2da-5f8e-4de5-bff7-55f3346c8bd4"
+      },
+      "source": [
+        "df"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sepal-length</th>\n",
+              "      <th>sepal-width</th>\n",
+              "      <th>petal-length</th>\n",
+              "      <th>petal-width</th>\n",
+              "      <th>class</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>5.1</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4.9</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.7</td>\n",
+              "      <td>3.2</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4.6</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>1.5</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5.0</td>\n",
+              "      <td>3.6</td>\n",
+              "      <td>1.4</td>\n",
+              "      <td>0.2</td>\n",
+              "      <td>Iris-setosa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95</th>\n",
+              "      <td>5.7</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>1.2</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>96</th>\n",
+              "      <td>5.7</td>\n",
+              "      <td>2.9</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>97</th>\n",
+              "      <td>6.2</td>\n",
+              "      <td>2.9</td>\n",
+              "      <td>4.3</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>98</th>\n",
+              "      <td>5.1</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>1.1</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99</th>\n",
+              "      <td>5.7</td>\n",
+              "      <td>2.8</td>\n",
+              "      <td>4.1</td>\n",
+              "      <td>1.3</td>\n",
+              "      <td>Iris-versicolor</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100 rows × 5 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    sepal-length  sepal-width  petal-length  petal-width            class\n",
+              "0            5.1          3.5           1.4          0.2      Iris-setosa\n",
+              "1            4.9          3.0           1.4          0.2      Iris-setosa\n",
+              "2            4.7          3.2           1.3          0.2      Iris-setosa\n",
+              "3            4.6          3.1           1.5          0.2      Iris-setosa\n",
+              "4            5.0          3.6           1.4          0.2      Iris-setosa\n",
+              "..           ...          ...           ...          ...              ...\n",
+              "95           5.7          3.0           4.2          1.2  Iris-versicolor\n",
+              "96           5.7          2.9           4.2          1.3  Iris-versicolor\n",
+              "97           6.2          2.9           4.3          1.3  Iris-versicolor\n",
+              "98           5.1          2.5           3.0          1.1  Iris-versicolor\n",
+              "99           5.7          2.8           4.1          1.3  Iris-versicolor\n",
+              "\n",
+              "[100 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -283,7 +473,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Since the Iris dataset has three classes, we will remove one of the classes. This leaves us with a binary class classification problem."
+        "Remove one of the classes to make this a binary class classification problem."
       ]
     },
     {
@@ -291,7 +481,7 @@
       "metadata": {
         "id": "P_9jwtsh0vuP",
         "colab_type": "code",
-        "outputId": "e4831323-5517-45d2-f7fb-7f94ea199409",
+        "outputId": "4d41b908-9262-4915-cd8f-7dc587ee30cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -312,7 +502,7 @@
         "plt.scatter(versicolor_x,versicolor_y,marker='_',color='red')\n",
         "plt.show()"
       ],
-      "execution_count": 57,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,7 +526,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Also, there are four features available for us to use. We will be using only two features, i.e Sepal length and Petal length"
+        "Drop sepal-length and petal-length Sepal. This will make it a 2 dimensional problem. "
       ]
     },
     {
@@ -391,11 +581,57 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "f-aydAK-4eo9",
+        "colab_type": "text"
+      },
+      "source": [
+        "Create the SVM model using the sklearn library"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q0WEZAsq2RxF",
+        "colab_type": "code",
+        "outputId": "bf12da6b-0508-4c9b-f62a-2e3991800def",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        }
+      },
+      "source": [
+        "clf = SVC(kernel='linear')\n",
+        "clf.fit(x_train,y_train)\n",
+        "y_pred = clf.predict(x_test)\n",
+        "print(accuracy_score(y_test,y_pred))"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "qxl-D5E41y43",
         "colab_type": "text"
       },
       "source": [
-        "Create the SVM model<br>\n",
+        "Create the SVM model from scratch<br>\n",
         "\n",
         "α(0.0001) is the learning rate and the regularization parameter λ is set to 1/epochs. Therefore, the regularizing value reduces the number of epochs increases."
       ]
@@ -443,42 +679,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "q0WEZAsq2RxF",
-        "colab_type": "code",
-        "outputId": "0b4587e7-1aae-4428-939e-f13c2227298e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 89
-        }
-      },
-      "source": [
-        "clf = SVC(kernel='linear')\n",
-        "clf.fit(x_train,y_train)\n",
-        "y_pred = clf.predict(x_test)\n",
-        "print(accuracy_score(y_test,y_pred))"
-      ],
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1.0\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-            "  y = column_or_1d(y, warn=True)\n"
-          ],
-          "name": "stderr"
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "LuqBNx012JMs",
@@ -522,7 +722,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "df289257-a6ab-4247-dbd8-8324782c1443"
+        "outputId": "10b33fdb-4c2a-4a10-a4ca-2dde4ea2cb0a"
       },
       "source": [
         "## Predict\n",
@@ -536,7 +736,7 @@
         "\n",
         "print(accuracy_score(y_test,predictions))"
       ],
-      "execution_count": 51,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
